force-app/main/default/objects/Bot_Action__c/Bot_Action__c.object-meta.xml
<CustomObject>
    <label>Bot Action</label>
    <nameField>
        <label>Bot Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>