force-app/main/default/objects/Bot_Action__c/fields/Canned_Response__c.field-meta.xml
<CustomField>
    <fullName>Canned_Response__c</fullName>
    <label>Canned Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>