force-app/main/default/objects/Bot_Action__c/fields/Default_Action__c.field-meta.xml
<CustomField>
    <fullName>Default_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Action</label>
    <type>Checkbox</type>
</CustomField>