force-app/main/default/objects/Bot_Action__c/fields/Flag_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Flag_Keyword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Keyword</label>
    <type>Checkbox</type>
</CustomField>