force-app/main/default/objects/Bot_Action__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>