force-app/main/default/objects/Bot_Action__c/fields/Invoke_Agent__c.field-meta.xml
<CustomField>
    <fullName>Invoke_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoke Agent</label>
    <type>Checkbox</type>
</CustomField>