force-app/main/default/objects/Bot_Action__c/fields/Task_Due_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_in_Hours__c</fullName>
    <label>Task Due in Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>