force-app/main/default/objects/Bot_Action__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <label>Task Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>